--- a/frontend/src/main/resources/templates/index.html
+++ b/frontend/src/main/resources/templates/index.html
@@ -2,18 +2,9 @@
 <head>
     <title>Guestbook</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
+    <link rel="stylesheet" th:href="@{/css/main.css}" href="../../css/main.css" />
     <meta charset="utf-8"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-    <style>
-      body { padding-top: 80px; }
-      form span { font-weight: bold; padding-right: 1em; display: block; }
-      form input[type="submit"] { display: block; margin-top: 1em; }
-      .greeting { padding-bottom: 0.5em; }
-      .messages { border-top: 1px solid black }
-      .message { display: block; }
-      .message span { padding-top: 0.5em; }
-      .message .username { font-weight: bold; width: 100px; float: left;}
-    </style>
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
